# persyn

./: .gitignore  LICENSE.txt  README.md  go-ci  go-dreams  go-interact  go-parrot  go-sd  go-slack  go-voice  go.py  launch_bot.py  pyproject.toml  requirements.txt  run_tests
chat/: common.py  requirements.txt  simple.py
chat/discord/: discord-bot.py  requirements.txt
chat/mastodon/: don-bot.py  donbot.py  login.py
chat/slack/: art.py  feels.py  gpt.py  install.sh  requirements.txt  slack.py
config/: example.conf.orig  example.yaml
docs/: elasticsearch.md
dreams/: README.md  dreams.py  install.sh
dreams/clip-interrogator/: interrogator.py  requirements.txt
dreams/clip-interrogator/data/: artists.txt  mediums.txt
dreams/prompt-parrot/: color_logging.py  prompt-parrot.py  requirements.txt
dreams/stable-diffusion/: go-sd
dreams/vqgan/: install.sh  requirements.txt  vqgan.py
interaction/: chrono.py  chrono_test.py  cns.py  color_logging.py  completion.py  completion_test.py  entities.py  feels.py  gpt.py  install.py  install.sh  interact-server.py  interact.py  memory.py  memory_test.py  nlp_cloud.py  relationship_test.py  relationships.py  reminders.py  requirements.txt  voice.py
interaction/notebooks/: Sentence tagging.ipynb  build_relationships.ipynb  closest emoji.ipynb  coreference.ipynb  diagram responses.ipynb  relationship_extraction_v2.ipynb
scripts/: kill_bot  launch_bot.py
src/: kill_bot.py  launch_bot.py
src/chat/: common.py  simple.py
src/chat/discord/: bot.py  discord-bot.py
src/chat/mastodon/: bot.py  donbot.py  login.py  masto-login.py
src/chat/slack/: bot.py  install.sh  slack.py
src/chat/stdio/: add_goal.py  elaborate.py  import_text.py  inject_idea.py  opine.py  persyn.py  read_rss.py  read_url.py  send_chat.py  summarize.py
src/dreams/: dreams.py  stable_diffusion.py
src/dreams/clip_interrogator/: interrogator.py
src/dreams/clip_interrogator/data/: artists.txt  flavors.txt
src/dreams/prompt-parrot/model/: README.txt
src/interaction/: chrono.py  cns.py  cns_autobus.py  completion.py  completion_test.py  feels.py  gpt.py  install.sh  interact-server.py  interact.py  interact_server.py  memory.py  memory_test.py  messages.py  nlp_cloud.py  relationships.py  reminders.py  requirements.txt
src/interaction/notebooks/: GPT-2.ipynb  Sentence tagging.ipynb  article_text.csv  build_relationships.ipynb  clip_interrogator.ipynb  coreference.ipynb  important nouns.ipynb  information extraction.ipynb  memory_debugging.ipynb  memory_lane.ipynb  relationship_extraction_v4.ipynb  relationsihip_aka.ipynb  summaries_need_speakers.ipynb  wikipedia.ipynb
src/persyn/: chopping_block.py  kill_bot.py  launch_bot.py
src/persyn/autobus/: __init__.py  client.py  event.py  scheduler.py  serializer.py
src/persyn/chat/: common.py  simple.py
src/persyn/chat/discord/: basic.py  bot.py
src/persyn/chat/mastodon/: bot.py  login.py  masto experiments.ipynb  masto-stream.py
src/persyn/chat/slack/: bot.py  manifest.yaml
src/persyn/chat/stdio/: add_goal.py  elaborate.py  import_text.py  inject_idea.py  opine.py  read_rss.py  read_url.py  reflect.py  send_chat.py  summarize.py
src/persyn/dreams/: dreams.py  exif_fun.ipynb  receive-sqs.py  requirements.txt  send-sqs.py  stable_diffusion.py
src/persyn/dreams/BLIP/: captions.py
src/persyn/dreams/BLIP/models/: blip.py
src/persyn/dreams/clip_interrogator/: requirements.txt
src/persyn/dreams/prompt-parrot/: requirements.txt
src/persyn/interaction/: chrono.py  cns.py  completion.py  feels.py  goals.py  gpt.py  graph.py  interact.py  interact_server.py  memory.py  messages.py  nlp_cloud.py  prompts.py  relationships.py  reminders.py
src/persyn/langchain/: zim.py
src/persyn/utils/: config.py  misc.py
src/utils/: color_logging.py  config.py
tests/: chrono_test.py  completion_test.py  goal_test.py  graph_test.py  interaction_test.py  memory_test.py  relationship_test.py
utils/: art.py  color_logging.py  config.py  entities.py
voice/: README.md
voice/gtts/: gtts_api.py  gtts_api_test.py  install.sh  requirements.txt
