[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "persyn"
version = "0.0.9"
authors = [
  { name="Rob Flickenger", email="rob@hackerfriendly.com" },
]
description = "Personality Syndrome. Persyn for short."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "alt-profanity-check==1.1.3",
  "beautifulsoup4",
  "boto3",
  "certifi",
  "click",
  "coreferee",
  "discord.py",
  "dotwiz",
  "elasticsearch",
  "fastapi[all]",
  "flair",
  "ftfy==6.1.1",
  "humanize",
  "Levenshtein",
  "Mastodon.py",
  "nlpcloud",
  "nltk",
  "openai",
  "pyyaml",
  "requests",
  "scikit-learn==1.1.3",
  "scipy==1.9.0",
  "shortuuid",
  "slack_bolt",
  "spacy",
  "spacytextblob",
  "uvicorn",
  "wikipedia",
  "asyncio",
  "tiktoken",
  "neomodel",
  # "autobus @ git+https://github.com/hackerfriendly/autobus"
]

[project.scripts]
launch_bot = "launch_bot:main"
kill_bot = "kill_bot:main"
interact = "interaction.interact_server:launch"
slack = "chat.slack.bot:main"
discord = "chat.discord.bot:main"
mastodon = "chat.mastodon.bot:main"
cns = "interaction.cns:main"
dreams = "dreams.dreams:launch"
stable_diffusion = "dreams.stable_diffusion:main"
import_text = "chat.stdio.import_text:main"
inject_idea = "chat.stdio.inject_idea:main"
summarize = "chat.stdio.summarize:main"
send_chat = "chat.stdio.send_chat:main"
elaborate = "chat.stdio.elaborate:main"
opine = "chat.stdio.opine:main"
add_goal = "chat.stdio.add_goal:main"
read_url = "chat.stdio.read_url:main"
read_rss = "chat.stdio.read_rss:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pylint",
  "jupyterlab"
]
# TODO: https://github.com/facebookresearch/xformers
stable_diffusion = [
  "accelerate",
  "scipy",
  "safetensors",
  "transformers",
  "diffusers",
  "torch",
  "torchvision"
]
all = [
  "accelerate",
  "diffusers",
  "safetensors",
  "scipy",
  "timm",
  "torch",
  "torchvision",
  "tqdm",
  "transformers"
]

[project.urls]
"Homepage" = "https://persyn.io"
"Bug Tracker" = "https://github.com/hackerfriendly/persyn/issues"
