[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "persyn"
version = "0.1.0"
authors = [
  { name="Rob Flickenger", email="rob@hackerfriendly.com" },
]
description = "Personality Syndrome. Persyn for short."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "aioredis",
  "alt-profanity-check==1.1.3",
  "asyncio",
  "beautifulsoup4",
  "certifi",
  "click",
  "coreferee",
  "discord.py",
  "dotwiz",
  "fastapi[all]",
  "flair",
  "ftfy==6.1.1",
  "humanize",
  "Levenshtein",
  "Mastodon.py",
  "neomodel",
  "nlpcloud",
  "nltk",
  "openai",
  "pyyaml",
  "redis[hiredis]>=4.5.0",
  "requests",
  "scikit-learn==1.1.3",
  "scipy==1.9.0",
  "shortuuid",
  "slack_bolt",
  "spacy",
  "spacytextblob",
  "tiktoken",
  "uvicorn",
  "wikipedia",
  # "autobus @ git+https://github.com/hackerfriendly/autobus"
]

[project.scripts]
launch_bot = "persyn.launch_bot:main"
kill_bot = "persyn.kill_bot:main"
interact = "persyn.interaction.interact_server:launch"
slack = "persyn.chat.slack.bot:main"
discord = "persyn.chat.discord.bot:main"
mastodon = "persyn.chat.mastodon.bot:main"
cns = "persyn.interaction.cns:main"
dreams = "persyn.dreams.dreams:launch"
stable_diffusion = "persyn.dreams.stable_diffusion:main"
import_text = "persyn.chat.stdio.import_text:main"
inject_idea = "persyn.chat.stdio.inject_idea:main"
summarize = "persyn.chat.stdio.summarize:main"
send_chat = "persyn.chat.stdio.send_chat:main"
elaborate = "persyn.chat.stdio.elaborate:main"
opine = "persyn.chat.stdio.opine:main"
add_goal = "persyn.chat.stdio.add_goal:main"
read_url = "persyn.chat.stdio.read_url:main"
read_rss = "persyn.chat.stdio.read_rss:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pylint",
  "jupyterlab"
]
# TODO: https://github.com/facebookresearch/xformers
stable_diffusion = [
  "accelerate",
  "scipy",
  "safetensors",
  "transformers",
  "diffusers",
  "torch",
  "torchvision"
]
all = [
  "accelerate",
  "diffusers",
  "safetensors",
  "scipy",
  "timm",
  "torch",
  "torchvision",
  "tqdm",
  "transformers"
]

[project.urls]
"Homepage" = "https://persyn.io"
"Bug Tracker" = "https://github.com/hackerfriendly/persyn/issues"
