[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "persyn"
version = "0.1.2-dev"
authors = [
  { name="Rob Flickenger", email="rob@hackerfriendly.com" },
]
description = "Personality Syndrome. Persyn for short."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "aioredis",
  "arxiv",
  "asyncio",
  "beautifulsoup4",
  "certifi",
  "click",
  "discord.py",
  "dotwiz",
  "duckduckgo-search",
  "fastapi[all]",
  "ftfy",
  "humanize",
  "langchain>=0.0.335",
  "libzim",
  "Levenshtein",
  "Mastodon.py",
  "neomodel",
  "nlpcloud",
  "nltk",
  "openai>=1.2.4",
  "plotly",
  "pymupdf",
  "python-ulid",
  "pyyaml",
  "redis[hiredis]>=4.5.0",
  "requests",
  "schedule",
  "scheduler",
  "scikit-learn==1.1.3",
  "scipy>=1.10.0",
  "shortuuid",
  "slack_bolt",
  "spacy",
  "spacytextblob",
  "tiktoken",
  "uvicorn",
  "wikipedia",
]

[project.scripts]
launch_bot = "persyn.launch_bot:main"
kill_bot = "persyn.kill_bot:main"
interact = "persyn.interaction.interact_server:launch"
slack = "persyn.chat.slack.bot:main"
discord = "persyn.chat.discord.bot:main"
mastodon = "persyn.chat.mastodon.bot:main"
cns = "persyn.interaction.cns:main"
dreams = "persyn.dreams.dreams:launch"
stable_diffusion = "persyn.dreams.stable_diffusion:main"
import_text = "persyn.chat.stdio.import_text:main"
inject_idea = "persyn.chat.stdio.inject_idea:main"
summarize = "persyn.chat.stdio.summarize:main"
send_chat = "persyn.chat.stdio.send_chat:main"
elaborate = "persyn.chat.stdio.elaborate:main"
opine = "persyn.chat.stdio.opine:main"
add_goal = "persyn.chat.stdio.add_goal:main"
read_url = "persyn.chat.stdio.read_url:main"
read_rss = "persyn.chat.stdio.read_rss:main"
reflect = "persyn.chat.stdio.reflect:main"
captions = "persyn.dreams.BLIP.captions:main"

[project.optional-dependencies]
dev = [
  "freezegun",
  "ipywidgets",
  "jupyter_contrib_nbextensions",
  "jupyterlab",
  "pylint",
  "pytest"
]

all = [
  "accelerate",
  "diffusers>=0.18.0",
  "fairscale==0.4.4",
  "invisible_watermark",
  "safetensors",
  "scipy",
  "timm",
  "torch",
  "torchvision",
  "tqdm",
  "transformers>=4.30.0",
  "xformers"
]

[project.urls]
"Homepage" = "https://persyn.io"
"Bug Tracker" = "https://github.com/hackerfriendly/persyn/issues"
